fix(core): fix overflow in search suggestions

--- a/resources/skins.citizen.search/skins.citizen.search.less
+++ b/resources/skins.citizen.search/skins.citizen.search.less
@@ -113,15 +113,4 @@
 			.citizen-card-content-show;
 		}
 	}
-
-	// Use to hide rounded corner from searchbox
-	&:before {
-		position: absolute;
-		width: var( --width-search-bar );
-		height: var( --border-radius--small );
-		margin-top: ~'calc( var( --border-radius--small ) * -1 )';
-		margin-left: -1px;
-		background: var( --color-surface-1 );
-		content: '';
-	}
 }
